2012-01-18 David Williams <dwilliams@ricohsv.com>
        * db/source/PPD/Infotec/PS/Infotec-MP_2352_PS.ppd,
	  db/source/PPD/Infotec/PS/Infotec-MP_2852_PS.ppd,
	  db/source/PPD/Infotec/PS/Infotec-MP_3352_PS.ppd,
	  db/source/PPD/Infotec/PXL/Infotec-MP_2352_PXL.ppd,
	  db/source/PPD/Infotec/PXL/Infotec-MP_2852_PXL.ppd,
	  db/source/PPD/Infotec/PXL/Infotec-MP_3352_PXL.ppd,
	  db/source/PPD/Gestetner/PS/Gestetner-MP2352_DSm923_PS.ppd,
	  db/source/PPD/Gestetner/PS/Gestetner-MP2852_DSm928_PS.ppd,
	  db/source/PPD/Gestetner/PS/Gestetner-MP3352_DSm933_PS.ppd,
	  db/source/PPD/Gestetner/PXL/Gestetner-MP2352_DSm923_PXL.ppd,
	  db/source/PPD/Gestetner/PXL/Gestetner-MP2852_DSm928_PXL.ppd,
	  db/source/PPD/Gestetner/PXL/Gestetner-MP3352_DSm933_PXL.ppd,
	  db/source/PPD/NRG/PS/NRG-MP_2352_PS.ppd,
	  db/source/PPD/NRG/PS/NRG-MP_2852_PS.ppd,
	  db/source/PPD/NRG/PS/NRG-MP_3352_PS.ppd,
	  db/source/PPD/NRG/PXL/NRG-MP_2352_PXL.ppd,
	  db/source/PPD/NRG/PXL/NRG-MP_2852_PXL.ppd,
	  db/source/PPD/NRG/PXL/NRG-MP_3352_PXL.ppd,
	  db/source/PPD/Savin/PS/Savin-MP_2352_PS.ppd,
	  db/source/PPD/Savin/PS/Savin-MP_2852_PS.ppd,
	  db/source/PPD/Savin/PS/Savin-MP_3352_PS.ppd,
	  db/source/PPD/Savin/PXL/Savin-MP_2352_PXL.ppd,
	  db/source/PPD/Savin/PXL/Savin-MP_2852_PXL.ppd,
	  db/source/PPD/Savin/PXL/Savin-MP_3352_PXL.ppd,
	  db/source/PPD/Lanier/PS/Lanier-MP_2352_PS.ppd,
	  db/source/PPD/Lanier/PS/Lanier-MP_2852_PS.ppd,
	  db/source/PPD/Lanier/PS/Lanier-MP_3352_PS.ppd,
	  db/source/PPD/Lanier/PXL/Lanier-MP_2352_PXL.ppd,
	  db/source/PPD/Lanier/PXL/Lanier-MP_2852_PXL.ppd,
	  db/source/PPD/Lanier/PXL/Lanier-MP_3352_PXL.ppd,
	  db/source/PPD/Ricoh/PS/Ricoh-Aficio_MP_2352_PS.ppd,
	  db/source/PPD/Ricoh/PS/Ricoh-Aficio_MP_2852_PS.ppd,
	  db/source/PPD/Ricoh/PS/Ricoh-Aficio_MP_3352_PS.ppd,
	  db/source/PPD/Ricoh/PXL/Ricoh-Aficio_MP_2352_PXL.ppd,
	  db/source/PPD/Ricoh/PXL/Ricoh-Aficio_MP_2852_PXL.ppd,
	  db/source/PPD/Ricoh/PXL/Ricoh-Aficio_MP_3352_PXL.ppd,