@@ -1,6 +1,6 @@
 <printer id="printer/Epson-EP_904F">
   <make>Epson</make>
-  <model>EP-904A</model>
+  <model>EP-904F</model>
   <mechanism>
     <inkjet />
     <color />
