@@ -1,6 +1,6 @@
-<printer id="printer/Epson-WP-4540">
+<printer id="printer/Epson-WP-4545">
   <make>Epson</make>
-  <model>WP-4540</model>
+  <model>WP-4545</model>
   <mechanism>
     <inkjet />
     <color />
@@ -14,11 +14,11 @@
   <url>http://www.epson.com/</url>
   <autodetect>
     <general>
-      <ieee1284>MFG:EPSON;CMD:ESCPL2,BDC,D4,D4PX,ESCPR2;WP-4540 Series;CLS:PRINTER;DES:EPSON WP-4540 Series</ieee1284>
+      <ieee1284>MFG:EPSON;CMD:ESCPL2,BDC,D4,D4PX,ESCPR2;WP-4545 Series;CLS:PRINTER;DES:EPSON WP-4545 Series</ieee1284>
       <commandset>ESCPL2,BDC,D4,D4PX,ESCPR2</commandset>
-      <description>EPSON WP-4540 Series</description>
+      <description>EPSON WP-4545 Series</description>
       <manufacturer>EPSON</manufacturer>
-      <model>WP-4540 Series</model>
+      <model>WP-4545 Series</model>
     </general>
   </autodetect>
   <functionality>A</functionality>
