@@ -1,3 +1,9 @@
+2012-01-23  Seiko Epson Corporation <linux-printer@epson.jp>
+	* db/source/printer/Epson-EP_904F.xml,
+         db/source/printer/Epson-WF-7018.xml,
+         db/source/printer/Epson-WP-4545.xml:
+	  Fixed typo.
+
 2012-01-18 David Williams <dwilliams@ricohsv.com>
         * db/source/PPD/Infotec/PS/Infotec-MP_2352_PS.ppd,
 	  db/source/PPD/Infotec/PS/Infotec-MP_2852_PS.ppd,
